--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/app_title"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
@@ -42,13 +42,15 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name=".myactivities.IndicatorActivity"
+            android:label="@string/choose_indicator"
             android:screenOrientation="portrait" />
         <activity
             android:name=".myactivities.TopicActivity"
+            android:label="@string/choose_topic"
             android:screenOrientation="portrait" />
         <activity
             android:name=".myactivities.CountryActivity"
-            android:label="Choose a country"
+            android:label="@string/choose_country"
             android:screenOrientation="portrait" />
     </application>
 
